sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: not found: value break
        break
        ^AlgBubbleSort1:19: error: not found: value bubblesort
  if (ech){bubblesort()}
           ^